<resources>
    <string name="app_name">SEG2505Project</string>

    <!-- Login Activity -->
    <string name="login_title_second">Finder</string>
    <string name="login_title_first">Service</string>
    <string name="login_password_hint">Password</string>
    <string name="login_username_hint">Username</string>
    <string name="login_button">Login</string>
    <string name="login_hint">If you don\'t have an account, click here to sign up</string>
    <string name="login_icon_description">Earth</string>

    <!-- Sign up Activity -->
    <string name="signup_username_hint">Username</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_button">Sign Up</string>
    <string name="signup_title_first">Create new</string>
    <string name="signup_title_second">account</string>
    <string name="signup_dropdown_title">Choose a role</string>
    <string-array name="signup_dropdown_list">
        <item>Owner</item>
        <item>Provider</item>
    </string-array>

    <!-- Customer Activity -->
    <string name="customer_appbar_title">Customer</string>

    <!-- Administrator Activity -->
    <string name="admin_first_row">Username</string>
    <string name="admin_second_row">Role</string>

    <!-- Services Activity -->
    <string name="services_empty_recycler_view">There are no services. To add services click on the
        plus button on the lower right.</string>
    <string name="services_content_description">Smiley face</string>
    <string name="services_child_hourly">Hourly Rate</string>
    <string name="services_child_people">Providers</string>
    <string name="services_child_modify_button">Modify</string>
    <string name="services_child_delete_button">Delete</string>
    <string name="services_child_content_description">Expend current service (to get more information)</string>

    <!-- Option Activity -->
    <string name="welcome">welcome</string>
    <string name="view_services">View services</string>
    <string name="view_user">View users</string>

    <!-- Owner Activity -->
    <string-array name="owner_dropdown_list">
        <item>Type of Service</item>
        <item>Time</item>
        <item>Rating</item>
    </string-array>

</resources>
